test/Fail/ConflictingRelevance2.err
ConflictingRelevance2.agda:4.37: error: [ParseError]
)<ERROR>  → A

-- Should fail.  (Curren...
